--- a/ios-developer.html
+++ b/ios-developer.html
@@ -48,11 +48,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/347a91c8-3292-4026-becc-01ca108c3dd9'>Helbiz Inc. - Junior IOS Developer - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/347a91c8-3292-4026-becc-01ca108c3dd9'>Helbiz Inc. - Junior IOS Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
+<h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -129,7 +129,7 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lagash/8a931a53-8ab9-4a6c-b6e8-6abcc764c49f'>Lagash - IOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/8a931a53-8ab9-4a6c-b6e8-6abcc764c49f'>Lagash - IOS Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -146,7 +146,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-reutlingen'>
+<h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-reutlingen'>
       iOS Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -172,7 +172,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
-<h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 ???? ????? ... Apply online for the job of iOS Developer at Wheely.</p>
 <hr/>
@@ -268,7 +268,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://freelancer.workable.com/j/853DDE858A'>Freelancer.com - Jobs: iOS Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/853DDE858A'>Freelancer.com - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -282,7 +282,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/MPHnecez7q/MaciOS-Application-Developer'>Mac/iOS Application Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/MPHnecez7q/MaciOS-Application-Developer'>Mac/iOS Application Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -342,11 +342,11 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://kapten.workable.com/j/C0302B5ABA'>Kapten - Jobs: iOS Developer (M/F) - Paris (relocation accepted) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/C0302B5ABA'>Kapten - Jobs: iOS Developer (M/F) - Paris (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
@@ -372,7 +372,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
@@ -409,7 +409,7 @@ Things?...</p>
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<h5><a href='http://fincons.applytojob.com/apply/yYBt9RHGBi/IOS-SENIOR-DEVELOPER'>iOS SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fincons.applytojob.com/apply/yYBt9RHGBi/IOS-SENIOR-DEVELOPER'>iOS SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -417,7 +417,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205531-ios-developer'>Central 1 Credit Union iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205531-ios-developer'>Central 1 Credit Union iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -446,7 +446,7 @@ Canada.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/1QYty9D05A/Senior-IOS-Developer'>Senior iOS Developer - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/1QYty9D05A/Senior-IOS-Developer'>Senior iOS Developer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
